--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <div class="row">
         <i class="fas fa-envelope"></i>
         <div class="info">
-            <div class="head">mail</div>
+            <div class="head">mail id</div>
             <div class="sub-title">vdilip1000@gmail.com</div>
         </div>
       </div> 
